# careflow-ai

./: .dockerignore  .gitignore  Dockerfile  ORIGINAL_REQUEST.md  PROJECT.md  README.md  debug_debounce.py  docker-compose.yml  pyproject.toml  scheduling-agent.md  test_sqlite_uri.py  verify_rag_challenger.py  verify_webhook_concurrency.py
.agents/: ORIGINAL_REQUEST.md
.agents/auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
app/: __init__.py  main.py
scripts/: init-db.sql  simulate_load.py
tests/: __init__.py  conftest.py  test_agent_agenda.py  test_agent_configs.py  test_agent_configs_api.py  test_agent_configs_challenger.py  test_agent_configs_review.py  test_agent_graph.py  test_agent_rag.py  test_challenger_adversarial_statuses.py  test_challenger_debounce_verification.py  test_challenger_edge_cases.py  test_challenger_followup_adversarial.py  test_challenger_rag.py  test_challenger_simulate_load.py  test_challenger_simulate_load_errors.py  test_challenger_status_classification.py  test_concurrency_debug.py  test_config.py  test_coverage_enhancement.py  test_database.py  test_debounce_resetable.py  test_docker_challenger.py  test_embedding.py  test_encryption.py  test_encryption_stress.py  test_followup.py  test_followup_adversarial.py  test_human_intervention.py  test_main.py  test_monitoring.py  test_reminders.py  test_sdr_node.py  test_session_manager.py  test_settings_model.py  test_simulate_load.py  test_tenant_database.py  test_webhook_high_concurrency.py  test_webhook_queue.py  test_webhook_stress_challenger.py
(+574 files in other folders)
