[tool.poetry]
name = "careflow-backend"
version = "0.1.0"
description = "CareFlow AI Backend Service"
authors = ["CareFlow Team <info@careflow.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
redis = "^5.0.6"
httpx = ">=0.28.1"
greenlet = "^3.0.3"
cryptography = "^42.0.8"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
langgraph = ">=0.1"
langchain = "^1.3.11"
langchain-google-genai = "^4.2.6"
langchain-anthropic = "^1.4.8"
langchain-openai = "^1.3.3"
prometheus-fastapi-instrumentator = "<8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
aiosqlite = "^0.22.1"
fakeredis = { version = "^2.23.2", extras = ["asyncio"] }
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests"]
